# interactive_incremental_learning

./: README.md
interactive_learning_object/: CMakeLists.txt  SaliencyDetectionDepth.cpp  image_converter.cpp  learn_obj.hpp  learn_object_pipeline.cpp  learn_object_pipeline.h  ros_learning_obj.cpp
interactive_learning_object/Untitled Folder/interactive_learning_object/: learn_obj.cpp  learn_object_pipeline.cpp
interactive_learning_object/Untitled Folder/interactive_learning_object/saliency_detector/: CMakeLists.txt  saliency_detector.h  saliency_example.cpp
interactive_learning_object/Untitled Folder/interactive_learning_object/tracker/: CMakeLists.txt  tracker.h  tracker_example.cpp
interactive_learning_object/Untitled Folder/interactive_learning_object/trainer/: CMakeLists.txt  trainer.cpp  trainer_example.cpp
interactive_learning_object/detector/: detector.cpp  detector.h
interactive_learning_object/saliency_detector/: .saliency_detector.h.swp  saliency_detector.cpp
interactive_learning_object/tracker/: CMakeLists.txt~  tracker.cpp
interactive_learning_object/tracker/video_frames/: testing.xml
interactive_learning_object/trainer/: trainer.h
